--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fyle-rest",
   "version": "1.0.0",
   "description": "Interview",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "pg": "^7.8.1",
     "sequelize": "^4.43.0"
