--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.8.1",
     "sequelize": "^4.43.0"
   }
