--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/devanandp/fyle-rest#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cat-me": "^1.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
